operator/pkg/gateway-api/testdata/gateway/listenerset-valid-with-invalid-gateway-listener/input/listenerset-valid-with-invalid-gateway-listener.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: valid-listenerset-only
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  allowedListeners:
    namespaces:
      from: Same
  listeners:
    - name: invalid-http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: InvalidRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: valid-listenerset
  namespace: gateway-conformance-infra
spec:
  parentRef:
    name: valid-listenerset-only
    namespace: gateway-conformance-infra
  listeners:
    - name: extra-http
      port: 8080
      protocol: HTTP
